# vala

./: .gitignore  CMakeLists.txt  INSTALL  config.h.in  vala-1.0.pc.in  version.h.in
bootstrap/: CMakeLists.txt
bootstrap/compiler/: CMakeLists.txt
bootstrap/vala/: CMakeLists.txt
ccode/: files.cmake
cmake/: FindValaDBus.cmake  FindValaGIO.cmake  FindValaGLib2.cmake  FindValaGModule2.cmake  FindValaGThread2.cmake  UseVala.cmake  ValaConfig.cmake.in  ValaConfigVersion.cmake.in  ValaCreateVapi.cmake.in  ValaInternal.cmake  ValaTestsMainTemplate.vala.in  ValaUpdateChangeLog.cmake.in  ValaUpdateVersionFile.cmake
codegen/: files.cmake
compiler/: CMakeLists.txt
doc/: CMakeLists.txt
doc/vala/: CMakeLists.txt
gee/: files.cmake
gobject-introspection/: CMakeLists.txt
tests/: CMakeLists.txt  tests.cmake
vala/: CMakeLists.txt  files.cmake  valacodecontext.vala
vapi/: CMakeLists.txt  files.cmake
vapigen/: CMakeLists.txt
vapigen/vala-gen-introspect/: CMakeLists.txt
